fixed z-index added parallax image

--- a/css/main.css
+++ b/css/main.css
@@ -39,9 +39,9 @@ img {
 .parallax-banner {
 	-webkit-transform-style: preserve-3d;
 	transform-style: preserve-3d;
-
+/*
 	padding-top: 10em;
-	padding-bottom: 10em;
+	padding-bottom: 10em;*/
 
 
 }
@@ -89,6 +89,8 @@ img {
 .navigation-list {
 	width: 100%;
 	text-align: center;
+	position: relative;
+	z-index: 100;
 }
 
 .navigation-list li {
@@ -141,6 +143,10 @@ img {
 .social-media {
 	text-align: center;
 	position: relative;	
+}
+
+.center-intro {
+	width: 50%;
 }
 
 .social-media a {
@@ -560,33 +566,15 @@ header {
 	margin-bottom: 0;
 }
 
-.item-information {
-	/*width: 30%;*/
-	position: relative;
-	top: 4em;
-	padding-left: 1%;
-}
 
-.select-item-images {
-	padding-left: 3em;
-	padding-right: 3em;
-	margin-top:4em; 
-	text-align: center;
-}
 
-.select-item-images img {
-	width: 60%;
-}
 
 .item-title {
 	margin:0;
 	line-height: 1;
 }
 
-.info-content {
-	
-	margin: 0;
-}
+
 
 .fixed-test {
 	height: 2000px;
@@ -662,11 +650,6 @@ header {
 		font-size: 100%;
 	}
 
-	.item-information {
-		padding-left: 5%;
-		padding-right: 5%;
-		padding-bottom: 2em;
-	}
 }
 
 @media only screen and (min-width: 38em) {
@@ -730,11 +713,7 @@ header {
 		top: -42%;
 	}
 
-	.item-information {
-		padding-left: 2%;
-		padding-right: 0;
-		padding-bottom: 0;
-	}
+
 }
 
 @media only screen and (min-width: 46em) {
@@ -765,9 +744,7 @@ header {
 		height: 31em; 
 	}
 
-	.item-information {
-		padding-left: 5%;
-	}
+
 
 }
 
@@ -837,9 +814,7 @@ header {
 		height: 48em; 
 	}
 
-	.item-information {
-		padding-left: 8%;
-	}
+	
 }
 
 @media only screen and (min-width: 135em) {
